# F401RE-Music-Player

./: .gitignore
app/: CMakeLists.txt  prj.conf
app/boards/: nucleo_f401re.overlay
app/src/: gpio.cpp  gpio.hpp  main.cpp  mp_lvgl.cpp  mp_lvgl.hpp  sd_card.cpp  sd_card.hpp  types.hpp
board/: music_player.kicad_sch
board/music_player/: music_player.kicad_pro  music_player.kicad_sch
board/music_player_claude/: music_player_claude.kicad_pro  music_player_claude.kicad_sch
board/music_player_dev_kit/: music_player.kicad_pro  music_player.kicad_sch
